--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   googlescholar    :  
   email            : "ruiyi@connect.hku.hk"
   researchgate     :   
-  uri              :
+  uri              : "https://ruiyi-yang.github.io/"
   bitbucket        :
   codepen          :
   dribbble         :
