--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links 
 main:
   - title: "Homepage"
-    url: "/#about-me"
+    url: https://ruiyi-yang.github.io/
 
   - title: "Gallery"
-    url: "/#gallery" 
+    url: https://ruiyi-yang.github.io/gallery/
