--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,4 +3,4 @@ main:
   - title: "Homepage"
     url: https://ruiyi-yang.github.io/
   - title: "Gallery"
-    url: "/#gallery"
+    url: https://ruiyi-yang.github.io/gallery/
